remove Anylist, put column config in regular list, add list and view page
