# server/boardgame.openapi.json
@@ -83,9 +83,21 @@
         },
         "responses": {
           "201": {
-            "description": ""
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/List"
+                }
+              }
+            }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "tags": [
           "List"
         ]
@@ -95,9 +107,24 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": ""
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/List"
+                  }
+                }
+              }
+            }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "tags": [
           "List"
         ]
@@ -128,6 +155,11 @@
             }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "tags": [
           "List"
         ]
@@ -166,6 +198,11 @@
             }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "tags": [
           "List"
         ]
@@ -194,6 +231,11 @@
             }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "tags": [
           "List"
         ]
@@ -500,180 +542,6 @@
           "Users"
         ]
       }
-    },
-    "/anylist": {
-      "post": {
-        "operationId": "AnylistController_create",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateAnylistDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AnylistDto"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "tags": [
-          "Anylist"
-        ]
-      },
-      "get": {
-        "operationId": "AnylistController_findAll",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/AnylistDto"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "tags": [
-          "Anylist"
-        ]
-      }
-    },
-    "/anylist/{id}": {
-      "get": {
-        "operationId": "AnylistController_findOne",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AnylistDto"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "tags": [
-          "Anylist"
-        ]
-      },
-      "patch": {
-        "operationId": "AnylistController_update",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateAnylistDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AnylistDto"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "tags": [
-          "Anylist"
-        ]
-      },
-      "delete": {
-        "operationId": "AnylistController_remove",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "tags": [
-          "Anylist"
-        ]
-      }
     }
   },
   "info": {
@@ -823,6 +691,32 @@
           "games"
         ]
       },
+      "ListColumnConfig": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string"
+          },
+          "field": {
+            "type": "string"
+          },
+          "header": {
+            "type": "string"
+          },
+          "width": {
+            "type": "number"
+          }
+        },
+        "required": [
+          "id",
+          "type",
+          "field",
+          "header"
+        ]
+      },
       "List": {
         "type": "object",
         "properties": {
@@ -841,13 +735,23 @@
             "items": {
               "$ref": "#/components/schemas/Game"
             }
+          },
+          "configSerialized": {
+            "type": "string"
+          },
+          "config": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ListColumnConfig"
+            }
           }
         },
         "required": [
           "id",
           "user",
           "name",
-          "games"
+          "games",
+          "config"
         ]
       },
       "SizeDto": {
@@ -987,84 +891,6 @@
           "shelves"
         ]
       },
-      "AnylistOptions": {
-        "type": "object",
-        "properties": {
-          "hide": {
-            "type": "object"
-          },
-          "ratingMax": {
-            "type": "number"
-          }
-        },
-        "required": [
-          "hide",
-          "ratingMax"
-        ]
-      },
-      "AnylistColumns": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "rating": {
-            "type": "number"
-          },
-          "notes": {
-            "type": "string"
-          },
-          "thumbnail": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "rating",
-          "notes",
-          "thumbnail"
-        ]
-      },
-      "Anylist": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number"
-          },
-          "user": {
-            "$ref": "#/components/schemas/User"
-          },
-          "name": {
-            "type": "string"
-          },
-          "optionsSerialized": {
-            "type": "string"
-          },
-          "options": {
-            "$ref": "#/components/schemas/AnylistOptions"
-          },
-          "dataSerialized": {
-            "type": "string"
-          },
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AnylistColumns"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "user",
-          "name",
-          "options",
-          "data"
-        ]
-      },
       "User": {
         "type": "object",
         "properties": {
@@ -1108,12 +934,6 @@
             "items": {
               "$ref": "#/components/schemas/Shelf"
             }
-          },
-          "anylists": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Anylist"
-            }
           }
         },
         "required": [
@@ -1126,8 +946,7 @@
           "isAdmin",
           "collections",
           "lists",
-          "shelves",
-          "anylists"
+          "shelves"
         ]
       },
       "CreateListDto": {
@@ -1217,84 +1036,6 @@
       "UpdateUserDto": {
         "type": "object",
         "properties": {}
-      },
-      "CreateAnylistDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number"
-          },
-          "name": {
-            "type": "string"
-          },
-          "options": {
-            "$ref": "#/components/schemas/AnylistOptions"
-          },
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AnylistColumns"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "options",
-          "data"
-        ]
-      },
-      "AnylistDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number"
-          },
-          "name": {
-            "type": "string"
-          },
-          "options": {
-            "$ref": "#/components/schemas/AnylistOptions"
-          },
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AnylistColumns"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "options",
-          "data"
-        ]
-      },
-      "UpdateAnylistDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number"
-          },
-          "name": {
-            "type": "string"
-          },
-          "options": {
-            "$ref": "#/components/schemas/AnylistOptions"
-          },
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AnylistColumns"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "options",
-          "data"
-        ]
       }
     }
   }
