# server/src/anylist/dto/create-anylist.dto.ts
@@ -1,3 +1,0 @@
-import { AnylistDto } from './get-anylist.dto';
-
-export class CreateAnylistDto extends AnylistDto {}
