# server/src/anylist/dto/update-anylist.dto.ts
@@ -1,3 +1,0 @@
-import { AnylistDto } from './get-anylist.dto';
-
-export class UpdateAnylistDto extends AnylistDto {}
